crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__enums__const_enums.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/enums.rs
expression: output
---
export const enum Color {
  RED = 'RED',
  GREEN = 'GREEN',
  BLUE = 'BLUE',
}

export interface Query {
  readonly __typename?: 'Query';
  readonly _empty?: string | null;
  readonly status?: Status | null;
  readonly color?: Color | null;
}

export const enum Status {
  ACTIVE = 'ACTIVE',
  INACTIVE = 'INACTIVE',
  PENDING = 'PENDING',
}
