crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__enums__enums_as_types.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/enums.rs
expression: output
---
export type Maybe<T> = T | null;

export interface Query {
  __typename: 'Query';
  _empty: Maybe<string>;
  status: Maybe<Status>;
  color: Maybe<Color>;
}

export type Status = 'ACTIVE' | 'INACTIVE' | 'PENDING';

export type Color = 'RED' | 'GREEN' | 'BLUE';
