crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__enums__enums_default.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/enums.rs
expression: output
---
export type Maybe<T> = T | null;

export interface Query {
  __typename: 'Query';
  _empty: Maybe<string>;
  status: Maybe<Status>;
  color: Maybe<Color>;
}

export enum Status {
  ACTIVE = 'ACTIVE',
  INACTIVE = 'INACTIVE',
  PENDING = 'PENDING',
}

export enum Color {
  RED = 'RED',
  GREEN = 'GREEN',
  BLUE = 'BLUE',
}
