crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__enums__enums_future_proof.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/enums.rs
expression: output
---
export enum Color {
  RED = 'RED',
  GREEN = 'GREEN',
  BLUE = 'BLUE',
}

export interface Query {
  readonly __typename?: 'Query';
  readonly _empty?: string | null;
  readonly status?: Status | null;
  readonly color?: Color | null;
}

export enum Status {
  ACTIVE = 'ACTIVE',
  INACTIVE = 'INACTIVE',
  PENDING = 'PENDING',
}
